# simple-c-api

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  cbindgen.toml  package.json  react-native-simple.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/simple/: Native.java  SimpleModule.java  SimplePackage.java
cpp/: react-native-simple.cpp  react-native-simple.h
csimple/: simple.h
example/: package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/simpleexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/simpleexample/: MainActivity.java  MainApplication.java
example/android/app/src/release/java/com/simpleexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/SimpleExample/: AppDelegate.mm  Info.plist
example/ios/SimpleExample.xcodeproj/: project.pbxproj
example/ios/SimpleExampleTests/: SimpleExampleTests.m
example/src/: App.tsx
include/: simple.h
ios/: Simple.h  Simple.mm
ios/Simple.xcodeproj/: project.pbxproj
rapper/: Cargo.toml  build.rs
rapper/src/: bindings.rs  lib.rs
src/: index.tsx  lib.rs
