[package]
name = "simple_c_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "simple_c_api"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.24.3"


[workspace]
members = [
    ".",
    "rapper",
]